--- a/playground/databinding/data-binding.html
+++ b/playground/databinding/data-binding.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <div id="app">
-        <p>{{ num }}</p>
+        <p v-bind:id="uuid" v-bind:class="name">{{ num }}</p>
         <p>{{ doubleNum }}</p>
+        <div v-if="loading">
+            Loading...
+        </div>
+        <div v-else>
+            test user has been logged in
+        </div>
+        <div v-show="loading">
+            Loading...
+        </div>
+        <input v-model="message" >
+        <p>message is : {{ message }}</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -17,7 +28,11 @@
         new Vue({
             el: '#app',
             data: {
-                num: 10
+                num: 10,
+                uuid: 'abc1234',
+                name: 'text-blue',
+                loading: true,
+                message: ''
             },
             computed: {
                 doubleNum: function() {
